# jwt-test

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
jwt_auth/: urls.py  views.py
jwt_auth/utils/security/: check_user_groups.py
tests/: jwt_api_test.py  jwt_auth_test.py
tests/fixtures/: __init__.py  auth_fixture.py
