[project]
name = "test-jwt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coverage~=7.6.10",
    "django~=4.2",
    "djangorestframework~=3.15",
    "djangorestframework-simplejwt~=5.4.0",
    "drf-spectacular~=0.28.0",
    "gunicorn~=23.0.0",
    "pytest~=8.3",
    "pytest-django~=4.9.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "tests/*",
    "*/__init__.py",
]
